--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 								<span class="number" data-number="15">0</span>
 								<span>Project complete</span>
 							</p>
-							<p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+							<p><a href="https://drive.google.com/file/d/1QIkhtbacWVybYOzxMDIcOjcpP78nGlTA/view?usp=sharing"
+									class="btn btn-primary py-3 px-3">Download CV</a></p>
 						</div>
 					</div>
 				</div>
@@ -445,17 +446,6 @@
 				</a>
 			</div>
 
-			<div class="col-md-4 text-center d-flex ftco-animate">
-				<a href="#" class="services-1 shadow">
-					<span class="icon">
-						<i class="flaticon-innovation"></i>
-					</span>
-					<div class="desc">
-						<h3 class="mb-5">App Developing</h3>
-						<p>Flutter</p>
-					</div>
-				</a>
-			</div>
 
 		</div>
 		</div>
@@ -529,44 +519,6 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-		<div class="container-fluid px-md-5">
-			<div class="row d-md-flex align-items-center">
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18 shadow">
-						<div class="text">
-							<strong class="number" data-number="100">0</strong>
-							<span>Awards</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18 shadow">
-						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
-							<span>Complete Projects</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18 shadow">
-						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
-							<span>Happy Customers</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-					<div class="block-18 shadow">
-						<div class="text">
-							<strong class="number" data-number="500">0</strong>
-							<span>Cups of coffee</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 
 
@@ -576,7 +528,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>I'm <span>Available</span> for freelancing</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+
 					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 				</div>
 			</div>
@@ -589,7 +541,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Contact</h1>
 					<h2 class="mb-4">Contact Me</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+
 				</div>
 			</div>
 
@@ -724,6 +676,7 @@
 							document.write(new Date().getFullYear());
 						</script> All rights reserved
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						his template is made with by Colorlib
 					</p>
 				</div>
 			</div>
