--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="icon" type="images/jpg" href="images/logoc.png">
+	<link rel="icon" type="images/png" href="images/logoc.png">
 	<title>RIZALDI NALDIAN PUTRA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
