--- a/index.html
+++ b/index.html
@@ -663,6 +663,11 @@
 											class="text">+62-8138-0244-442</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
 											class="text">rizaldi.naldian@gmail.com</span></a></li>
+								<div style="width: 100%"><iframe scrolling="no" marginheight="0" marginwidth="0"
+										src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Bogor%20Tengah+(Rizaldi%20Naldian%20Putra)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+										width="100%" height="auto" frameborder="0"></iframe><a
+										href="http://www.gps.ie/">
+								</div>
 							</ul>
 						</div>
 					</div>
