--- a/index.html
+++ b/index.html
@@ -686,7 +686,13 @@
 					</p>
 				</div>
 			</div>
-		</div>
+
+			<div class="row">
+				<div class="col-md-12 text-center">
+
+
+				</div>
+			</div>
 	</footer>
 
 
