--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<span class="number" data-number="15">0</span>
 								<span>Project complete</span>
 							</p>
-							<p><a href="https://drive.google.com/file/d/1GtLKZSM4vJDczzE69aYnwOxqbPKwGxsK/view?usp=drivesdk"
+							<p><a href="https://drive.google.com/file/d/1QIkhtbacWVybYOzxMDIcOjcpP78nGlTA/view"
 									class="btn btn-primary py-3 px-3">Download CV</a></p>
 						</div>
 					</div>
