--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<span class="number" data-number="15">0</span>
 								<span>Project complete</span>
 							</p>
-							<p><a href="https://drive.google.com/file/d/1MezJTXebfhkYQ1SGcyCi-z-75eaSwW4y/view?usp=drivesdk"
+							<p><a href="https://drive.google.com/file/d/1NkRcdsnxaXziype1sw5qrLeP-x4H9K-k/view?usp=sharing"
 									class="btn btn-primary py-3 px-3">Download CV</a></p>
 						</div>
 					</div>
