--- a/index.html
+++ b/index.html
@@ -486,32 +486,43 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work2.png);">
+						style="background-image: url(images/work-13.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding Company Profiel </a></h3>
+							<h3><a href="#">Academy Course</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-5.jpg);">
+						style="background-image: url(images/work-9.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#">News Apps </a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-6.jpg);">
+						style="background-image: url(images/work-10.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#">E-commerce </a></h3>
+							<span>Web Design</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/work-11.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">Branding Digital Marketing</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -522,19 +533,6 @@
 
 
 
-
-	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-7 ftco-animate text-center">
-					<h2>I'm <span>Available</span> for freelancing</h2>
-
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
-				</div>
-			</div>
-		</div>
-	</section>
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 		<div class="container">
