--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     // If the count down is finished, write some text
                     if (distance < 0) {
                         clearInterval(x);
-                        document.getElementById("demo").innerHTML = "EXPIRED";
+                        document.getElementById("demo").innerHTML = "RANGER ORANGE & GREEN";
                     }
                 }, 1000);
             </script>
