--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
                 text-shadow: 5px 0px 30px red;
             }
 
+            #demo2 {
+                color: white;
+                font-size: 20;
+                text-shadow: 5px 0px 30px red;
+            }
+
+
             .blink_me {
                 animation: blinker 1s linear infinite;
             }
@@ -221,6 +228,17 @@
 
             <center></b>
                 <p id="demo"></p>
+                <p id="demo2">Nabi shallallahu ‘alaihi wa sallam juga memerintahkan memberikan upah sebelum keringat si
+                    pekerja
+                    kering. Dari ‘Abdullah bin ‘Umar, Nabi shallallahu ‘alaihi wa sallam bersabda,
+
+                    أَعْطُوا الأَجِيرَ أَجْرَهُ قَبْلَ أَنْ يَجِفَّ عَرَقُهُ
+
+                    “Berikan kepada seorang pekerja upahnya sebelum keringatnya kering.” (HR. Ibnu Majah, shahih).
+
+
+                </p>
+
 
                 <font class="blink_me" size="40" color="red" face="Wallpoet" style="text-shadow: 5px 0px 30px red;">
                     BAYARKAN HAK KAMI...!!!!!!!!!</font>
@@ -383,6 +401,9 @@
                     if (distance < 0) {
                         clearInterval(x);
                         document.getElementById("demo").innerHTML = "RANGER ORANGE & GREEN";
+
+
+
                     }
                 }, 1000);
             </script>
