--- a/portfolio.html
+++ b/portfolio.html
@@ -224,12 +224,12 @@
                             </a>
                             <h4>Follow Me</h4>
                         </div>
-                        <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
+						<div class="footer_social">
+							<a href="https://www.facebook.com/profile.php?id=100073592903059"><i class="fa fa-facebook"></i></a>
+							<a href="https://x.com/Rizaldi_naldi"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/rizaldinaldianputra/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.instagram.com/rizaldinaldianputra"><i class="fa fa-instagram"></i></a>
+						</div>
                     </div>
                 </div>
             </div>
