--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Hrsystem Web</a></h4>
+								<h4><a href="portfolio-details.html">HRIS</a></h4>
 								<p>CMM Group</p>
 							</div>
 						</div>
@@ -341,6 +341,43 @@
 							<div class="short_info">
 								<h4><a href="portfolio-details.html">Point Of Sale</a></h4>
 								<p>Retail Sinar12</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all following">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/sinarquran.png" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/sinarquran.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.html">Sinar Quran</a></h4>
+								<p>Aplikasi Al-Quran</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all following">
+						<div class="portfolio_box" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+							<div class="single_portfolio" style="display: flex; align-items: center; justify-content: center;">
+								<img class="img-fluid" 
+									 src="img/portfolio/barber.png" 
+									 alt="" 
+									 style="max-width: 50%; height: auto; margin: 0 auto;">
+								<div class="overlay"></div>
+								<a href="img/portfolio/barber.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info" style="text-align: center;">
+								<h4><a href="portfolio-details.html">Barbershop Apps</a></h4>
+								<p>Aplikasi Barbershop Style & Grooming</p>
 							</div>
 						</div>
 					</div>
