--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Hrsystem Web</a></h4>
+								<h4><a href="portfolio-details.html">HRIS</a></h4>
 								<p>CMM Group</p>
 							</div>
 						</div>
