portofolio hris mejabantu

--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,42 @@
 							</div>
 						</div>
 					</div>
+					
+
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/hris.png" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/hris.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.html">HRIS</a></h4>
+								<p>HRIS Manyala Group</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/fastchat.png" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/fastchat.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.html">Fast Chat</a></h4>
+								<p>Fast Chat Technology Meja Bantu</p>
+							</div>
+						</div>
+					</div>
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
